# nomad-novelMOF

./: LICENSE  MANIFEST.in  README.md  mkdocs.yml  move_template_files.sh  pyproject.toml
docs/: index.md
src/nomad_novelMOF.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/nomad_novelmof/apps/: __init__.py  novel_mof_app.py
src/nomad_novelmof/normalizers/: __init__.py  normalizer.py
src/nomad_novelmof/parsers/: __init__.py  mof_archive_parser.py  mofarch_json_parser.py  parser.py  utils.py
src/nomad_novelmof/schema_packages/: __init__.py  novelmof_01.py  novelmof_mofarch.py  novelmof_ref_01.py  novelmof_ref_02.py  schema_package.py
tests/apps/: test_app.py
tests/data/: test.archive.yaml
tests/parsers/: test_parser.py
